@@ -2,28 +2,60 @@ package de.tum.in.www1.artemis.service.programming;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 
-import org.json.JSONObject;
+import javax.validation.constraints.NotNull;
+
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.test.context.support.WithMockUser;
 
 import de.tum.in.www1.artemis.AbstractSpringIntegrationIndependentTest;
 import de.tum.in.www1.artemis.config.Constants;
-import de.tum.in.www1.artemis.domain.Feedback;
+import de.tum.in.www1.artemis.domain.*;
 import de.tum.in.www1.artemis.domain.enumeration.ProgrammingLanguage;
 import de.tum.in.www1.artemis.domain.enumeration.ProjectType;
 import de.tum.in.www1.artemis.domain.enumeration.StaticCodeAnalysisTool;
+import de.tum.in.www1.artemis.domain.hestia.ProgrammingExerciseTestCaseType;
 import de.tum.in.www1.artemis.exercise.programmingexercise.ProgrammingExerciseFactory;
+import de.tum.in.www1.artemis.exercise.programmingexercise.ProgrammingExerciseUtilService;
+import de.tum.in.www1.artemis.repository.ProgrammingExerciseRepository;
+import de.tum.in.www1.artemis.repository.ProgrammingExerciseTestCaseRepository;
+import de.tum.in.www1.artemis.service.dto.AbstractBuildResultNotificationDTO;
 import de.tum.in.www1.artemis.service.dto.StaticCodeAnalysisReportDTO;
 
 class ProgrammingExerciseFeedbackCreationServiceTest extends AbstractSpringIntegrationIndependentTest {
 
-    private static final String TEST_PREFIX = "progexfeedbackcreaiontest";
-
     @Autowired
     private ProgrammingExerciseFeedbackCreationService feedbackCreationService;
+
+    @Autowired
+    private ProgrammingExerciseRepository programmingExerciseRepository;
+
+    @Autowired
+    private ProgrammingExerciseTestCaseRepository testCaseRepository;
+
+    @Autowired
+    private ProgrammingExerciseUtilService programmingExerciseUtilService;
+
+    private ProgrammingExercise programmingExercise;
+
+    @BeforeEach
+    void init() {
+        Course course = programmingExerciseUtilService.addCourseWithOneProgrammingExercise();
+        programmingExercise = (ProgrammingExercise) course.getExercises().iterator().next();
+        programmingExercise.setProgrammingLanguage(ProgrammingLanguage.JAVA);
+        programmingExercise.setProjectType(ProjectType.PLAIN_MAVEN);
+        programmingExercise = programmingExerciseRepository.save(programmingExercise);
+        programmingExerciseUtilService.addTestCasesToProgrammingExercise(programmingExercise);
+    }
+
+    private String createFeedbackFromTestCase(String testName, List<String> testMessages, boolean successful) {
+        var activeTestCases = testCaseRepository.findByExerciseIdAndActive(programmingExercise.getId(), true);
+        return feedbackCreationService.createFeedbackFromTestCase(testName, testMessages, successful, programmingExercise, activeTestCases).getDetailText();
+    }
 
     @Test
     void createFeedbackFromTestCaseCombineMultiple() {
@@ -43,8 +75,7 @@ class ProgrammingExerciseFeedbackCreationServiceTest extends AbstractSpringInteg
                   to contain:
                     ["Java"]""";
 
-        String actualFeedback = feedbackCreationService.createFeedbackFromTestCase("test1", List.of(msg1, msg2, msg3), false, ProgrammingLanguage.JAVA, ProjectType.PLAIN_MAVEN)
-                .getDetailText();
+        String actualFeedback = createFeedbackFromTestCase("test1", List.of(msg1, msg2, msg3), false);
 
         assertThat(actualFeedback).isEqualTo("""
                 expected:
@@ -72,7 +103,10 @@ class ProgrammingExerciseFeedbackCreationServiceTest extends AbstractSpringInteg
                     5
                 org.opentest4j.AssertionFailedError: expected:
                     something else""";
-        String actualFeedback = feedbackCreationService.createFeedbackFromTestCase("test2", List.of(msgMatchMultiple), false, ProgrammingLanguage.KOTLIN, null).getDetailText();
+        programmingExercise.setProgrammingLanguage(ProgrammingLanguage.KOTLIN);
+        programmingExercise.setProjectType(null);
+        programmingExercise = programmingExerciseRepository.save(programmingExercise);
+        String actualFeedback = createFeedbackFromTestCase("test2", List.of(msgMatchMultiple), false);
         assertThat(actualFeedback).isEqualTo("""
                 expected:
                     4
@@ -85,8 +119,7 @@ class ProgrammingExerciseFeedbackCreationServiceTest extends AbstractSpringInteg
     @Test
     void createFeedbackFromTestCaseUnchanged() {
         String msgUnchanged = "Should not be changed";
-        String actualFeedback = feedbackCreationService.createFeedbackFromTestCase("test3", List.of(msgUnchanged), false, ProgrammingLanguage.JAVA, ProjectType.PLAIN_MAVEN)
-                .getDetailText();
+        String actualFeedback = createFeedbackFromTestCase("test3", List.of(msgUnchanged), false);
         assertThat(actualFeedback).isEqualTo(msgUnchanged);
 
     }
@@ -98,8 +131,7 @@ class ProgrammingExerciseFeedbackCreationServiceTest extends AbstractSpringInteg
                 \tat test.MethodTest.checkMethods(MethodTest.java:129)
                 \tat test.MethodTest.testMethods(MethodTest.java:72)
                 \tat test.MethodTest.lambda$0(MethodTest.java:52)""";
-        String actualFeedback = feedbackCreationService.createFeedbackFromTestCase("test1", List.of(msgWithStackTrace), false, ProgrammingLanguage.JAVA, ProjectType.PLAIN_MAVEN)
-                .getDetailText();
+        String actualFeedback = createFeedbackFromTestCase("test1", List.of(msgWithStackTrace), false);
         assertThat(actualFeedback).isEqualTo("the expected method 'getDates' of the class 'Context' with no parameters was not found or is named wrongly.");
     }
 
@@ -119,8 +151,7 @@ class ProgrammingExerciseFeedbackCreationServiceTest extends AbstractSpringInteg
                 \tat org.hibernate.loader.plan.exec.process.internal.AbstractRowReader.readRow(AbstractRowReader.java:125)
                 \tat org.hibernate.loader.plan.exec.process.internal.ResultSetProcessorImpl.extractRows(ResultSetProcessorImpl.java:157)
                 \tat org.hibernate.loader.plan.exec.process.internal.ResultSetProcessorImpl.extractResults(ResultSetProcessorImpl.java:94)""";
-        String actualFeedback = feedbackCreationService.createFeedbackFromTestCase("test1", List.of(msgWithStackTrace), false, ProgrammingLanguage.JAVA, ProjectType.PLAIN_MAVEN)
-                .getDetailText();
+        String actualFeedback = createFeedbackFromTestCase("test1", List.of(msgWithStackTrace), false);
         assertThat(actualFeedback).isEqualTo(
                 "org.springframework.orm.jpa.JpaSystemException: org.springframework.orm.jpa.JpaSystemException: null index column for collection: de.tum.in.www1.artemis.domain.exam.Exam.exerciseGroups");
     }
@@ -150,8 +181,7 @@ class ProgrammingExerciseFeedbackCreationServiceTest extends AbstractSpringInteg
                 \tat java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:500)
                 \tat de.tum.in.www1.artemis.FeedbackServiceTest.createFeedbackFromTestCaseMatchMultiple(FeedbackServiceTest.java:66)
                 """;
-        String actualFeedback = feedbackCreationService.createFeedbackFromTestCase("test1", List.of(msgWithStackTrace), false, ProgrammingLanguage.JAVA, ProjectType.PLAIN_MAVEN)
-                .getDetailText();
+        String actualFeedback = createFeedbackFromTestCase("test1", List.of(msgWithStackTrace), false);
         assertThat(actualFeedback).isEqualTo("""
                 Expecting:
                  <"expected:
@@ -171,19 +201,142 @@ class ProgrammingExerciseFeedbackCreationServiceTest extends AbstractSpringInteg
     }
 
     @Test
+    void createTimeoutFeedback() {
+        String msgWithStackTrace = """
+                org.opentest4j.AssertionFailedError: execution timed out after 1 s
+                \tat de.tum.in.test.api.localization.Messages.localizedFailure(Messages.java:34)
+                \tat de.tum.in.test.api.internal.TimeoutUtils.generateTimeoutFailure(TimeoutUtils.java:79)
+                \tat de.tum.in.test.api.internal.TimeoutUtils.executeWithTimeout(TimeoutUtils.java:72)
+                \tat de.tum.in.test.api.internal.TimeoutUtils.performTimeoutExecution(TimeoutUtils.java:42)
+                    """;
+        String actualFeedback = createFeedbackFromTestCase("test1", List.of(msgWithStackTrace), false);
+        assertThat(actualFeedback)
+                .isEqualTo("The test case execution timed out. This indicates issues in your code such as endless loops, issues with recursion or really slow performance. "
+                        + "Please carefully review your code to avoid such issues. In case you are absolutely sure that there are no issues like this, please contact your instructor to check the setup of the test.\n"
+                        + "Exception message: execution timed out after 1 s");
+    }
+
+    @Test
     void createFeedbackFromTestCaseSuccessfulWithMessage() {
         String msg = "success\nmessage";
-        assertThat(feedbackCreationService.createFeedbackFromTestCase("test1", List.of(msg), true, ProgrammingLanguage.JAVA, ProjectType.PLAIN_MAVEN).getDetailText())
-                .isEqualTo("success\nmessage");
+        assertThat(createFeedbackFromTestCase("test1", List.of(msg), true)).isEqualTo("success\nmessage");
     }
 
     @Test
     void createFeedbackFromTestCaseSuccessfulNoMessage() {
-        assertThat(feedbackCreationService.createFeedbackFromTestCase("test1", List.of(), true, ProgrammingLanguage.JAVA, ProjectType.PLAIN_MAVEN).getDetailText()).isNull();
+        assertThat(createFeedbackFromTestCase("test1", List.of(), true)).isNull();
+    }
+
+    private AbstractBuildResultNotificationDTO generateResult(List<String> successfulTests, List<String> failedTests) {
+        return ProgrammingExerciseFactory.generateBambooBuildResult("SOLUTION", null, null, null, successfulTests, failedTests, null);
+    }
+
+    @Test
+    void shouldSetAllTestCasesToInactiveIfFeedbackListIsEmpty() {
+        var result = generateResult(Collections.emptyList(), Collections.emptyList());
+        feedbackCreationService.generateTestCasesFromBuildResult(result, programmingExercise);
+
+        Set<ProgrammingExerciseTestCase> testCases = testCaseRepository.findByExerciseId(programmingExercise.getId());
+        assertThat(testCases).hasSize(3).noneMatch(ProgrammingExerciseTestCase::isActive);
+    }
+
+    @Test
+    void shouldUpdateActiveFlagsOfTestCases() {
+        var result = generateResult(List.of("test1", "test2"), List.of("test4", "test5"));
+        feedbackCreationService.generateTestCasesFromBuildResult(result, programmingExercise);
+
+        Set<ProgrammingExerciseTestCase> testCases = testCaseRepository.findByExerciseId(programmingExercise.getId());
+        assertThat(testCases).hasSize(5).allMatch(testCase -> {
+            if ("test3".equals(testCase.getTestName())) {
+                return !testCase.isActive();
+            }
+            else {
+                return testCase.isActive();
+            }
+        });
+    }
+
+    @Test
+    void shouldGenerateNewTestCases() {
+        // We do not want to use the test cases generated in the setup
+        testCaseRepository.deleteAll(testCaseRepository.findByExerciseId(programmingExercise.getId()));
+
+        var result = generateResult(List.of("test1", "test2"), Collections.emptyList());
+        feedbackCreationService.generateTestCasesFromBuildResult(result, programmingExercise);
+
+        Set<ProgrammingExerciseTestCase> testCases = testCaseRepository.findByExerciseId(programmingExercise.getId());
+        assertThat(testCases).hasSize(2);
+
+        assertThat(testCases.stream().allMatch(ProgrammingExerciseTestCase::isActive)).isTrue();
+    }
+
+    @Test
+    void shouldFilterOutDuplicateTestCases() {
+        // We do not want to use the test cases generated in the setup
+        testCaseRepository.deleteAll(testCaseRepository.findByExerciseId(programmingExercise.getId()));
+
+        var result = generateResult(List.of("test1"), List.of("generateTestsForAllClasses", "generateTestsForAllClasses", "generateTestsForAllClasses"));
+        feedbackCreationService.generateTestCasesFromBuildResult(result, programmingExercise);
+
+        Set<ProgrammingExerciseTestCase> testCases = testCaseRepository.findByExerciseId(programmingExercise.getId());
+        assertThat(testCases).hasSize(2);
+    }
+
+    @Test
+    void shouldMapStructuralTestCaseTypesCorrectly() {
+        Set<ProgrammingExerciseTestCase> structuralTestCases = Set.of(new ProgrammingExerciseTestCase().testName("testClass[Policy]").exercise(programmingExercise),
+                new ProgrammingExerciseTestCase().testName("testConstructors[BubbleSort]").exercise(programmingExercise),
+                new ProgrammingExerciseTestCase().testName("testMethods[Context]").exercise(programmingExercise),
+                new ProgrammingExerciseTestCase().testName("testAttributes[Starter]").exercise(programmingExercise));
+
+        feedbackCreationService.setTestCaseType(structuralTestCases, ProgrammingLanguage.JAVA);
+        assertThat(structuralTestCases).allMatch(testCase -> testCase.getType() == ProgrammingExerciseTestCaseType.STRUCTURAL);
+    }
+
+    @Test
+    void shouldMapBehavioralTestCaseTypesCorrectly() {
+        Set<ProgrammingExerciseTestCase> behavioralTestCases = Set.of(new ProgrammingExerciseTestCase().testName("testBubbleSort").exercise(programmingExercise),
+                new ProgrammingExerciseTestCase().testName("testMergeSort").exercise(programmingExercise),
+                new ProgrammingExerciseTestCase().testName("test13412").exercise(programmingExercise),
+                new ProgrammingExerciseTestCase().testName("HiddenRandomTest").exercise(programmingExercise));
+
+        feedbackCreationService.setTestCaseType(behavioralTestCases, ProgrammingLanguage.JAVA);
+        assertThat(behavioralTestCases).allMatch(testCase -> testCase.getType() == ProgrammingExerciseTestCaseType.BEHAVIORAL);
+    }
+
+    @Test
+    void shouldMapNonJavaTestsToDefaultTestCaseType() {
+        Set<ProgrammingExerciseTestCase> testCases;
+
+        for (ProgrammingLanguage language : ProgrammingLanguage.values()) {
+            if (language == ProgrammingLanguage.JAVA) {
+                continue;
+            }
+            testCases = Set.of(new ProgrammingExerciseTestCase().testName("testBubbleSort").exercise(programmingExercise),
+                    new ProgrammingExerciseTestCase().testName("testMergeSort").exercise(programmingExercise),
+                    new ProgrammingExerciseTestCase().testName("test13412").exercise(programmingExercise),
+                    new ProgrammingExerciseTestCase().testName("HiddenRandomTest").exercise(programmingExercise));
+            feedbackCreationService.setTestCaseType(testCases, language);
+            assertThat(testCases).allMatch(testCase -> testCase.getType() == ProgrammingExerciseTestCaseType.DEFAULT);
+        }
     }
 
     @Test
     void staticCodeAnalysisReportNotTruncatedFurther() {
+        final StaticCodeAnalysisReportDTO scaReport = createStaticCodeAnalysisReportDTO();
+
+        final List<Feedback> scaFeedbacks = feedbackCreationService.createFeedbackFromStaticCodeAnalysisReports(List.of(scaReport));
+        assertThat(scaFeedbacks).hasSize(1);
+
+        final Feedback scaFeedback = scaFeedbacks.get(0);
+        assertThat(scaFeedback.getHasLongFeedbackText()).isFalse();
+        assertThat(scaFeedback.getLongFeedback()).isEmpty();
+        assertThat(scaFeedback.getDetailText()).hasSizeGreaterThan(Constants.FEEDBACK_DETAIL_TEXT_SOFT_MAX_LENGTH)
+                .hasSizeLessThanOrEqualTo(Constants.FEEDBACK_DETAIL_TEXT_DATABASE_MAX_LENGTH);
+    }
+
+    @NotNull
+    private static StaticCodeAnalysisReportDTO createStaticCodeAnalysisReportDTO() {
         final String longText = "0".repeat(Constants.FEEDBACK_DETAIL_TEXT_SOFT_MAX_LENGTH * 2);
 
         final var scaIssue = new StaticCodeAnalysisReportDTO.StaticCodeAnalysisIssue();
@@ -196,62 +349,6 @@ class ProgrammingExerciseFeedbackCreationServiceTest extends AbstractSpringInteg
         final StaticCodeAnalysisReportDTO scaReport = new StaticCodeAnalysisReportDTO();
         scaReport.setTool(StaticCodeAnalysisTool.CHECKSTYLE);
         scaReport.setIssues(List.of(scaIssue));
-
-        final List<Feedback> scaFeedbacks = feedbackCreationService.createFeedbackFromStaticCodeAnalysisReports(List.of(scaReport));
-        assertThat(scaFeedbacks).hasSize(1);
-
-        final Feedback scaFeedback = scaFeedbacks.get(0);
-        assertThat(scaFeedback.getHasLongFeedbackText()).isFalse();
-        assertThat(scaFeedback.getLongFeedback()).isEmpty();
-        assertThat(scaFeedback.getDetailText()).hasSizeGreaterThan(Constants.FEEDBACK_DETAIL_TEXT_SOFT_MAX_LENGTH)
-                .hasSizeLessThanOrEqualTo(Constants.FEEDBACK_DETAIL_TEXT_DATABASE_MAX_LENGTH);
-    }
-
-    @Test
-    @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
-    void testRemoveCIDirectoriesFromPath() {
-        // 1. Test that paths not containing the Constant.STUDENT_WORKING_DIRECTORY are not shortened
-        String pathWithoutWorkingDir = "Path/Without/StudentWorkingDirectory/Constant";
-
-        var resultNotification1 = ProgrammingExerciseFactory.generateBambooBuildResultWithStaticCodeAnalysisReport(Constants.ASSIGNMENT_REPO_NAME, List.of("test1"), List.of(),
-                ProgrammingLanguage.JAVA);
-        for (var reports : resultNotification1.getBuild().jobs().iterator().next().staticCodeAnalysisReports()) {
-            for (var issue : reports.getIssues()) {
-                issue.setFilePath(pathWithoutWorkingDir);
-            }
-        }
-        var staticCodeAnalysisFeedback1 = feedbackCreationService
-                .createFeedbackFromStaticCodeAnalysisReports(resultNotification1.getBuild().jobs().get(0).staticCodeAnalysisReports());
-
-        for (var feedback : staticCodeAnalysisFeedback1) {
-            JSONObject issueJSON = new JSONObject(feedback.getDetailText());
-            assertThat(pathWithoutWorkingDir).isEqualTo(issueJSON.get("filePath"));
-        }
-
-        // 2. Test that null or empty paths default to FeedbackRepository.DEFAULT_FILEPATH
-        var resultNotification2 = ProgrammingExerciseFactory.generateBambooBuildResultWithStaticCodeAnalysisReport(Constants.ASSIGNMENT_REPO_NAME, List.of("test1"), List.of(),
-                ProgrammingLanguage.JAVA);
-        var reports2 = resultNotification2.getBuild().jobs().iterator().next().staticCodeAnalysisReports();
-        for (int i = 0; i < reports2.size(); i++) {
-            var report = reports2.get(i);
-            // Set null or empty String to test both
-            if (i % 2 == 0) {
-                for (var issue : report.getIssues()) {
-                    issue.setFilePath("");
-                }
-            }
-            else {
-                for (var issue : report.getIssues()) {
-                    issue.setFilePath(null);
-                }
-            }
-        }
-        final List<Feedback> staticCodeAnalysisFeedback2 = feedbackCreationService
-                .createFeedbackFromStaticCodeAnalysisReports(resultNotification2.getBuild().jobs().get(0).staticCodeAnalysisReports());
-
-        for (var feedback : staticCodeAnalysisFeedback2) {
-            JSONObject issueJSON = new JSONObject(feedback.getDetailText());
-            assertThat(issueJSON.get("filePath")).isEqualTo("notAvailable");
-        }
+        return scaReport;
     }
 }
